# Glassify

./: .gitignore  LICENSE  README.md
examples/: CMakeLists.txt  Glassify.sln  setup.bat
examples/FunctionReflection/: CMakeLists.txt  FunctionReflection.vcxproj  main.cpp
examples/GlassifyHeaders/: CMakeLists.txt  GlassifyHeaders.vcxproj  GlassifyHeaders.vcxproj.filters
examples/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters  ImGui_GlasDemo.cpp  ImGui_GlasDemo.h  imgui.ini  main.cpp
examples/ImGui/ImGuiEditor/: ImGuiWrappers.h
examples/Inheritance/: CMakeLists.txt  Inheritance.vcxproj  main.cpp
examples/Serialization/: CMakeLists.txt  Serialization.vcxproj  Serialization.vcxproj.filters  main.cpp
examples/Storage/: CMakeLists.txt  Storage.vcxproj  main.cpp
include/: glas_config.h  glas_decl.h  glas_dependencies.h  glas_enum.h  glas_impl.h  glas_properties.h  glassify.h
include/imgui/: glas_imgui.h  glas_imgui_config.h
include/memoryTrace/: glas_memTrace.h  glas_memTrace_config.h
include/serialization/: glas_serialization.h  glas_serialization_binary.h  glas_serialization_config.h  glas_serialization_config_binary.h  glas_serialization_config_json.h  glas_serialization_config_yaml.h  glas_serialization_json.h  glas_serialization_yaml.h
include/serialization/Json3rdParty/rapidjson/: rapidjson.h
include/storage/: glas_storage.h  glas_storage_config.h
